# svr

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  README.rst  cmake_uninstall.cmake.in  old-Makefile
doc/: Doxyfile  dot
doc/pages/: mainpage.doc.txt  python_bindings.doc.txt
include/: svr.h
include/svr/: allocators.h  blockalloc.h  client.h  comm.h  cv.h  encoding.h  errors.h  forward.h  frameproperties.h  lockable.h  logging.h  mempool.h  message.h  messagehandlers.h  messagerouting.h  net.h  optionstring.h  pack.h  reencoder.h  refcount.h  responseset.h  source.h  stream.h  streambuffer.h  stringbuffer.h
include/svr/server/: client.h  event.h  forward.h  framefilter.h  messagehandlers.h  reencoder.c  reencoder.h  server.h  source.h  stream.h  svr.h
lib/: CMakeLists.txt  Makefile  blockalloc.c  comm.c  encoding.c  frameproperties.c  lockable.c  logging.c  main.c  mempool.c  message.c  messagehandlers.c  messagerouting.c  net.c  old-Makefile  optionstring.c  pack.c  refcount.c  responseset.c  source.c  stream.c
lib/encodings/: encodings.h  jpeg.c  raw.c
mk/: config.base.mk  config.darwin.mk  config.linux.mk
python/: CMakeLists.txt  buildscript.sh  setup.py  svr.py
server/: CMakeLists.txt  Makefile  client.c  event.c  main.c  messagehandlers.c  messagerouting.c  server.c  source.c  stream.c
server/include/: svrd.h
server/include/svrd/: .#source.h  client.h  event.h  forward.h  messagehandlers.h  messagerouting.h  server.h  source.h  stream.h
server/sources/: cam.c  file.c  sources.h  test.c  v4l.c
src/: Makefile  allocators.c  blockalloc.c  comm.c  encoding.c  frameproperties.c  libsvr.so.0  logging.c  main.c  mempool.c  message.c  messagehandlers.c  messagerouting.c  net.c  pack.c  responseset.c  source.c  stream.c  streambuffer.c  stringbuffer.c
src/encodings/: encoding_internal.h  encodings.h  jpeg.c  raw.c
src/server/: Makefile  client.c  framefilter.c  fullreencoder.c  main.c  messagehandlers.c  messagerouting.c  reencoder.c  server.c  source.c  source_cam.c  source_test.c  stream.c  svr
src/server/framefilters/: framefilters.h  resize.c
src/server/reencoders/: fullreencoder.c  reencoders.h
src/server/sources/: cam.c  file.c  sources.h  test.c
test/: CMakeLists.txt  Makefile  test  test.c  test_source.c
util/: CMakeLists.txt  Makefile  old-Makefile  svrctl.c  svrwatch.c
