cmake_minimum_required (VERSION 3.1)
project ( util )
set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENCV_CFLAGS} -Wall -Werror") 
include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
add_executable( svrctl svrctl.c )
add_executable( svrwatch svrwatch.c )
install( TARGETS svrctl DESTINATION "bin")
install( TARGETS svrwatch DESTINATION "bin")
target_link_libraries( svrctl libsvr seawolf ${OPENCV_LIBRARIES} )
target_link_libraries( svrwatch libsvr seawolf ${OPENCV_LIBRARIES} )
